black cmd windows turned off for iMLP